--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,13 +28,14 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-
+    compile 'com.google.firebase:firebase-auth:11.0.4'
     compile 'com.android.support:appcompat-v7:25.2.0'
     compile 'com.android.support:design:25.2.0'
     compile 'com.android.support:cardview-v7:25.2.0'
     compile 'com.android.support:recyclerview-v7:25.2.0'
-    compile 'com.google.firebase:firebase-database:10.0.1'
+    compile 'com.google.firebase:firebase-database:11.0.4'
     compile 'com.google.code.gson:gson:2.7'
+
     testCompile 'junit:junit:4.12'
 }
 
